Minor adjustments to fix alignment. Improvement of texts and meta tags.

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -13,6 +13,15 @@ $dark-gray: #03c100;
 $medium-gray: $6D6B69;
 */
 
+
+* { background-color: rgba(255,0,0,.2); }
+* * { background-color: rgba(0,255,0,.2); }
+* * * { background-color: rgba(0,0,255,.2); }
+* * * * { background-color: rgba(255,0,255,.2); }
+* * * * * { background-color: rgba(0,255,255,.2); }
+* * * * * * { background-color: rgba(255,255,0,.2); }
+
+
 body {
     width: 100%;
     height: 100%;
@@ -447,8 +456,7 @@ a[href], input[type='submit'], input[type='image'], label[for], select, button, 
 .intro {
 display: table;
 width: 100%;
-height: 100%;
-height: auto;
+height: 100vh;
 text-align: center;
 padding: 110px 0;
 }
